Disabling auto suggestions for improved LeetCode problem solving experience

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "dotnet.defaultSolution": "LeetCodeDailies.slnx"
+    "dotnet.defaultSolution": "LeetCodeDailies.slnx",
+    "editor.quickSuggestions": true,
+    "editor.suggestOnTriggerCharacters": true,
+    "editor.inlineSuggest.enabled": false,
+    "editor.parameterHints.enabled": true,
+    "editor.snippetSuggestions": "none"
 }
