Moved test files up one step in the folder structure

--- a/tests/LeetCode.Tests.csproj
+++ b/tests/LeetCode.Tests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\LeetCode.csproj" />
+    <ProjectReference Include="..\src\LeetCode.csproj" />
   </ItemGroup>
 
 </Project>
